update css responsive

--- a/css/style.css
+++ b/css/style.css
@@ -636,6 +636,19 @@ footer .credit a {
 @media (max-width: 1366px) {
   html {
     font-size: 75%;
+    .hero .background-slideshow img {
+      width: auto;
+      right: 0;
+      left: 0;
+      height: 100%;
+      align-items: center;
+      opacity: 0;
+      transition: opacity 1s ease-in-out;
+      filter: hue-rotate(10deg) brightness(0.77);
+    }
+    .hero .background-slideshow img.active {
+      opacity: 1;
+    }
   }
 }
 /* TABLET */
