--- a/css/style.css
+++ b/css/style.css
@@ -367,7 +367,7 @@ body {
   transform: translateY(0);
 }
 
-/* CSS untuk tampilan menu atua brand catalog yang tersedia */
+/* CSS untuk tampilan menu/brand yang tersedia */
 .menu .row {
   display: flex;
   flex-wrap: wrap;
@@ -414,7 +414,7 @@ body {
   transform: translateY(0);
 } */
 
-/* CSS untuk stock barnag atau product */
+/* Product Section */
 .products .row {
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(30rem, 1fr));
@@ -474,7 +474,7 @@ body {
   font-weight: bold;
 }
 
-/* CSS untuk contact */
+/* Contact Section */
 .contact .row {
   display: flex;
   margin-top: 2rem;
@@ -525,13 +525,12 @@ body {
   background-color: #6b240c;
 }
 
-/* CSS untuk Footer */
+/* Footer */
 footer {
   background-color: var(--primary);
   text-align: center;
   padding: 1rem 0 3rem;
   margin-top: 3rem;
-  position: relative;
 }
 footer .socials {
   padding: 1rem 0;
@@ -631,46 +630,10 @@ footer .credit a {
   html {
     font-size: 75%;
     .hero .background-slideshow img {
-      width: 100%;
-      right: 0;
-      left: 0;
-      height: 100%;
-      align-items: center;
-      opacity: 0;
-      transition: opacity 1s ease-in-out;
-      filter: hue-rotate(10deg) brightness(0.77);
-    }
-    .hero .background-slideshow img.active {
-      opacity: 1;
-    }
-  }
-}
-@media (max-width: 1100px) {
-  html {
-    font-size: 75%;
-    .hero .background-slideshow img {
       width: auto;
       right: 0;
       left: 0;
       height: 100%;
-      align-items: center;
-      opacity: 0;
-      transition: opacity 1s ease-in-out;
-      filter: hue-rotate(10deg) brightness(0.77);
-    }
-    .hero .background-slideshow img.active {
-      opacity: 1;
-    }
-  }
-}
-@media (max-width: 1080px) {
-  html {
-    font-size: 75%;
-    .hero .background-slideshow img {
-      width: 100%;
-      right: 0;
-      left: 0;
-      height: auto;
       align-items: center;
       opacity: 0;
       transition: opacity 1s ease-in-out;
@@ -694,7 +657,7 @@ footer .credit a {
     z-index: 1;
   }
   .hero .background-slideshow img {
-    width: auto;
+    width: 100%;
     right: 0;
     left: 0;
     height: 100%;
